--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "google-maps-react": "^2.0.6",
     "react-slick": "^0.27.13",
@@ -34,6 +35,10 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "react-slick": "^0.27.13",
+    "react-with-direction": "^1.3.1",
+    "slick-carousel": "^1.8.1",
+    "react-with-direction": "^1.3.1",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.0",
     "web-vitals": "^0.2.4"
