--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.1",
+    "react-kakao-login": "^2.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
