--- a/package.json
+++ b/package.json
@@ -11,10 +11,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.1.22",
+    "react-kakao-login": "^2.0.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.0",
     "web-vitals": "^0.2.4"
@@ -44,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dates": "^21.8.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2"
