--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "@sweetalert2/theme-borderless": "^4.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "google-maps-react": "^2.0.6",
-    "react-slick": "^0.27.13",
-    "react-with-direction": "^1.3.1",
     "slick-carousel": "^1.8.1",
     "axios": "^0.21.0",
     "moment": "^2.29.1",
@@ -31,11 +30,14 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-slick": "^0.27.13",
+    "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.0",
+    "sweetalert2": "^10.10.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
